--- a/lk15.html
+++ b/lk15.html
@@ -134,14 +134,7 @@
         <div class="component">
           <div class="component_head" style="margin-bottom: 0">
             <div class="component_head_sort" style="width: 100%">
-              <div class="line_param_input line_param_input_t">
-                <div class="label_in">
-                  <input type="text" class="tinput" />
-                  <label class="tlabel">Поиск по всему</label>
-                  <span class="search"></span>
-                </div>
-              </div>
-              <div class="line_param_input line_param_input_t">
+              <div class="line_param_input line_param_input_t" style="margin-bottom: 20px">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
                 <input type="text" placeholder="Период от и до"/>
                 <span class="calendar"></span>
@@ -176,7 +169,7 @@
                       <tr class="head_t table_returns">
                       <th>
                         <div>
-                          <span>Номер</span>
+                          <span>Номер накладной продажи</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -185,7 +178,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Дата</span>
+                          <span>Дата сервера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -230,16 +223,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Партнер</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Оператор</span>
+                          <span>Получатель баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -249,24 +233,6 @@
                       <th>
                         <div>
                           <span>Сумма</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Расчетный период</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Склад</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -301,10 +267,7 @@
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>tt - test</td>
                       <td>232444</td>
-                      <td>март 2020 г.</td>
-                      <td>Томск-Кондырева</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr style="background-color: rgba(237, 26, 46, 0.16);">
@@ -323,10 +286,7 @@
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>tt - test</td>
                       <td>232444</td>
-                      <td>март 2020 г.</td>
-                      <td>Томск-Кондырева</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr style="background-color: #CEEBEA;">
@@ -345,10 +305,7 @@
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>tt - test</td>
                       <td>232444</td>
-                      <td>март 2020 г.</td>
-                      <td>Томск-Кондырева</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr>
@@ -367,10 +324,7 @@
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>tt - test</td>
                       <td>232444</td>
-                      <td>март 2020 г.</td>
-                      <td>Томск-Кондырева</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     </tbody>
