--- a/lk5.html
+++ b/lk5.html
@@ -229,6 +229,15 @@
                           <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                         </div>
                       </th>
+                      <th>
+                        <div>
+                          <span>Тип документа</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
                     </tr>
                   </thead>
                   <tbody>
@@ -245,6 +254,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Продажа</td>
                   </tr>
                   <tr>
                     <td>
@@ -259,6 +269,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Продажа</td>
                   </tr>
                   <tr>
                     <td>
@@ -273,6 +284,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Продажа</td>
                   </tr>
                   <tr>
                     <td>
@@ -287,6 +299,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Возврат</td>
                   </tr>
                   <tr>
                     <td>
@@ -301,6 +314,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Возврат</td>
                   </tr>
                   <tr>
                     <td>
@@ -315,6 +329,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Возврат</td>
                   </tr>
                   <tr>
                     <td>
@@ -329,6 +344,7 @@
                     <td>Круглова Л.А.</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Возврат</td>
                   </tr>
                   </tbody>
                 </table>
@@ -488,7 +504,7 @@
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput" required />
-                    <label class="tlabel" for>Распространитель</label>
+                    <label class="tlabel" for>ID / ФИО покупателя</label>
                   </div>
                 </div>
                 <div class="nav_links">
