--- a/lk9.html
+++ b/lk9.html
@@ -164,15 +164,6 @@
                   <table class="otch_p bordered">
                     <thead>
                       <tr class="head_t">
-                      <th style="width: 9%; padding-right: 25px">
-                        <div>
-                          <span>ID товара</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
                       <th style="padding-right: 25px">
                         <div>
                           <span>Артикул</span>
@@ -274,7 +265,7 @@
                       </th>
                       <th style="padding-right: 25px">
                         <div>
-                          <span>Остаток (конец периода)</span>
+                          <span>Остаток на конец периода (расчётный)</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -283,7 +274,7 @@
                       </th>
                       <th style="padding-right: 25px">
                         <div>
-                          <span>Остаток (реальный)</span>
+                          <span>Остаток на конец периода (факт)</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -294,7 +285,6 @@
                     </thead>
                     <tbody>
                       <tr>
-                      <td>2334</td>
                       <td>6000</td>
                       <td>VIP-продукция</td>
                       <td>
@@ -314,7 +304,6 @@
                       <td>12</td>
                     </tr>
                       <tr>
-                        <td>2334</td>
                         <td>6000</td>
                         <td>VIP-продукция</td>
                         <td>
@@ -334,7 +323,6 @@
                         <td>12</td>
                       </tr>
                       <tr>
-                        <td>2334</td>
                         <td>6000</td>
                         <td>VIP-продукция</td>
                         <td>
@@ -354,7 +342,6 @@
                         <td>12</td>
                       </tr>
                       <tr>
-                        <td>2334</td>
                         <td>6000</td>
                         <td>VIP-продукция</td>
                         <td>
