--- a/lk14.html
+++ b/lk14.html
@@ -174,7 +174,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Наименование дочернего склада</span>
+                          <span>Наименование вышестоящего склада</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -217,15 +217,6 @@
                           <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                         </div>
                       </th>
-                      <th>
-                        <div>
-                          <span>Изменить статус</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
                     </tr>
                   </thead>
                   <tbody>
@@ -246,7 +237,6 @@
                       <td>24</td>
                       <td>Выщестоящий партнер</td>
                       <td>Заказ создан</td>
-                      <td>Отправляем</td>
                     </tr>
                     <tr>
                       <td>
@@ -265,7 +255,6 @@
                       <td>24</td>
                       <td>Выщестоящий партнер</td>
                       <td>Заказ создан</td>
-                      <td>Отправляем</td>
                     </tr>
                     <tr>
                       <td>
@@ -284,7 +273,6 @@
                       <td>24</td>
                       <td>Выщестоящий партнер</td>
                       <td>Заказ создан</td>
-                      <td>Отправляем</td>
                     </tr>
                     <tr>
                       <td>
@@ -303,7 +291,6 @@
                       <td>24</td>
                       <td>Выщестоящий партнер</td>
                       <td>Заказ создан</td>
-                      <td>Отправляем</td>
                     </tr>
                     <tr>
                       <td>
@@ -322,7 +309,6 @@
                       <td>24</td>
                       <td>Выщестоящий партнер</td>
                       <td>Заказ создан</td>
-                      <td>Отправляем</td>
                     </tr>
                   </tbody>
                 </table>
