--- a/lk7.html
+++ b/lk7.html
@@ -140,13 +140,6 @@
           <div class="component_head">
             <div class="component_head_sort" style="width: 100%">
               <div class="line_param_input line_param_input_t">
-                <div class="label_in">
-                  <input type="text" class="tinput" />
-                  <label class="tlabel">Поиск по всему</label>
-                  <span class="search"></span>
-                </div>
-              </div>
-              <div class="line_param_input line_param_input_t">
                 <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
                 <input type="text" placeholder="Период от и до"/>
                 <span class="calendar"></span>
@@ -171,15 +164,6 @@
                       <th>
                         <div>
                           <span>Дата</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Тип продаж</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -215,16 +199,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Партнер</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Оператор</span>
+                          <span>Получатель баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -254,12 +229,10 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
                       <td>921005</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
                       <td>tt - test</td>
                     </tr>
                     <tr>
@@ -273,12 +246,10 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
                       <td>921005</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
                       <td>tt - test</td>
                     </tr>
                     <tr>
@@ -292,12 +263,10 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
                       <td>921005</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
                       <td>tt - test</td>
                     </tr>
                     <tr>
@@ -311,12 +280,10 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
                       <td>921005</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
                       <td>tt - test</td>
                     </tr>
                   </tbody>
