--- a/lk6.html
+++ b/lk6.html
@@ -180,7 +180,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ покупателя</span>
+                          <span>ID покупателя</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -198,7 +198,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ партнера</span>
+                          <span>ID партнера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
