--- a/lk7.html
+++ b/lk7.html
@@ -172,7 +172,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ покупателя</span>
+                          <span>ID покупателя</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -190,7 +190,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ партнера</span>
+                          <span>ID партнера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -430,7 +430,7 @@
                 <table class="otch_p bordered">
                   <thead>
                     <tr class="head_t">
-                      <th>№</th>
+                      <th>ID</th>
                       <th>Артикул</th>
                       <th>Товар</th>
                       <th>Цена</th>
