--- a/lk13.html
+++ b/lk13.html
@@ -178,6 +178,47 @@
             </div>
           </div>
           <div class="component_body">
+            <h3>Корзина</h3>
+            <div class="line_param_input">
+              <div class="l_p">
+                <div class="line_param">
+                  <div class="line_param_top">
+                    Сумма продажи:
+                  </div>
+                  <div class="line_param_bottom">
+                    3582.75
+                  </div>
+                </div>
+                <div class="line_param" style="margin-bottom: 0">
+                  <div class="line_param_top">
+                    Сумма баллов:
+                  </div>
+                  <div class="line_param_bottom">
+                    27.80
+                  </div>
+                </div>
+              </div>
+              <div class="r_p">
+                <div class="line_param">
+                  <div class="line_param_top">
+                    Всего единиц товара:
+                  </div>
+                  <div class="line_param_bottom">
+                    5
+                  </div>
+                </div>
+                <div class="line_param">
+                  <div class="line_param_top">
+                    Всего наименований:
+                  </div>
+                  <div class="line_param_bottom">
+                    3
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="component_body">
             <div class="f_part" style="padding-bottom: 35px">
               <div class="middle_part">
                 <table class="otch_p bordered">
