--- a/lk14.html
+++ b/lk14.html
@@ -139,6 +139,15 @@
           </div>
         </div>
         <div class="component">
+          <div class="component_head">
+            <div class="component_head_sort" style="width: 100%">
+              <div class="line_param_input line_param_input_t">
+                <label>Период от и до</label>
+                <input type="text" placeholder="01.04.2020 - 09.09.2020"/>
+                <span class="calendar"></span>
+              </div>
+            </div>
+          </div>
           <div class="component_body">
             <div class="f_part">
               <div class="middle_part">
@@ -147,7 +156,7 @@
                     <tr class="head_t">
                       <th style="width: 15%">
                         <div>
-                          <span>№ заявки П/П</span>
+                          <span>ID заявки П/П</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
