--- a/lk15.html
+++ b/lk15.html
@@ -196,7 +196,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ покупателя</span>
+                          <span>ID покупателя</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -214,7 +214,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ партнера</span>
+                          <span>ID партнера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
