--- a/lk5.html
+++ b/lk5.html
@@ -186,7 +186,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ покупателя</span>
+                          <span>ID покупателя</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -195,7 +195,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ склада покупателя</span>
+                          <span>ID склада покупателя</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -222,7 +222,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>№ партнера</span>
+                          <span>ID партнера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
